--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@coinbase/onchainkit": "latest",
     "@farcaster/miniapp-sdk": "^0.1.10",
     "@radix-ui/react-slot": "^1.2.3",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@supabase/supabase-js": "^2.57.4",
     "@tailwindcss/postcss": "^4.1.13",
     "@tanstack/react-query": "^5.81.5",
